/*
 * Copyright 2011 The Netty Project
 *
 * The Netty Project licenses this file to you under the Apache License,
 * version 2.0 (the "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at:
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations
 * under the License.
 */

// How to generate
// ===============
// $ cd example
// $ protoc src/main/java/io/netty/example/worldclock/WorldClockProtocol.proto --java_out=src/main/java 
//          
//
// Add @SuppressWarnings("all") to the generated code not to pollute IDE task list.



//package io.netty.example.commands;

option optimize_for = SPEED;

enum Instruction {
  START_DATA_NODE = 1;
  ACCEPT_DATA = 2;
  ACCEPT_JAR = 3;
  START_TASK_TRACKER = 4;
  START_MAP = 5;
  START_REDUCE = 6;
  RETURN_KEYS_AND_LOCATIONS = 7;
  ACCEPT_KEYS_AND_LOCATIONS = 8;
  VALUES_FOR_KEY = 9;
  SHUTDOWN = 10;
}

message Command {
  required uint32 commandId = 1;
  required string commandString = 2;
  
  //required Instruction instruction;
  //optional string inputChunk;
  //optional repeated KeyLocations keysAndLocations;
}

message KeyLocations{
	required string key = 1;
	required repeated Location locations = 2;
}

message CommandResponse{
	required uint32 forCommandId = 1;
	required bool status = 2; //[default = true];
	optional string responseText = 3;
	optional repeated string keys = 4;
}

message HeartBeat{
	required bool status = 1;
}

message Location{
	required string ip = 1;
	required uint32 chunk = 2;
	required uint32 start = 3;
	required uint32 offset = 4; 
}